--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ table {
 td {
     font-weight: 700;
     vertical-align: middle;
+	padding: 4px;
 }
 
 .bold-serif-text {
@@ -76,13 +77,17 @@ td {
     background: url('../images/drinks4.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     min-height: 100vh;
     padding: 100px 0px;
 }
 
 .blue-background {
     background: rgb(50, 50, 195);
+}
+
+.navy-blue-background {
+	background: rgba(5, 13, 52, 0.9);
 }
 
 .golden-border {
